exercise-12/ingresscrd-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`crd.<REPLACE_ME>)
      services:
        - kind: Service
          name: whoami-svc
          port: 80
      middlewares:
        - name: default-redirectscheme@kubernetescrd
