exercise-12/ingresscrd-websecure.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`crd.wrks.demo.traefiklabs.tech`) || Host(`crda.wrks.demo.traefiklabs.tech`)
      services:
        - kind: Service
          name: whoami-svc
          port: 80
      middlewares:
        - name: default-security@kubernetescrd
  tls:
    certResolver: le
    domains:
      - main: crd.wrks.demo.traefiklabs.tech
        sans:
          - crda.wrks.demo.traefiklabs.tech
    options:
      name: tlsoptions

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security
spec:
  headers:
    frameDeny: true               # the page can not be loaded in an iframe, Set frameDeny to true to add the X-Frame-Options header with the value of DENY.
    sslRedirect: true             # The sslRedirect only allow HTTPS requests when set to true.
    browserXssFilter: true        # Limit XSS, Set browserXssFilter to true to add the X-XSS-Protection header with the value 1; mode=block.
    contentTypeNosniff: true      # Do not detect Mime type by browser, Set contentTypeNosniff to true to add the X-Content-Type-Options header with the value nosniff.
    # HSTS HTTP Strict Transport Security
    stsIncludeSubdomains: true    # If the stsIncludeSubdomains is set to true, the includeSubDomains directive is appended to the Strict-Transport-Security header. all subdomains have to HSTS complained
    stsPreload: true              # https://hstspreload.org/
    stsSeconds: 31536000          #  To be able to use HSTS Preloading, this parameter must be at least 31536000 seconds
